samples/_failures_safe/1761652256_2470c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad04f70f.c: In function ‘main’:
./samples/SAFE/__tmp_ad04f70f.c:147:5: error: ‘add’ undeclared (first use in this function)
  147 |     add
      |     ^~~
./samples/SAFE/__tmp_ad04f70f.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ad04f70f.c:147:8: error: expected ‘;’ at end of input
  147 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_ad04f70f.c:147:5: error: expected declaration or statement at end of input
  147 |     add
      |     ^~~
